--- a/style.css
+++ b/style.css
@@ -2,12 +2,30 @@ ul { font-family: Courier Prime;
    
 }
 
-.hello{font-family:'Courier New', Courier, monospace; width:30% ;}
+.logo-image{
+    width: 46px;
+    height: 46px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-top: -6px;
+}
+
+
+.marge{
+
+    margin-top: 400px;
+}
+.hello{font-family:'Courier New', Courier, monospace; width:60% ; font-size: 44px;
+margin-top: 50px;}
 .navbar{background-color: rgb(255, 255, 255);
     justify-content: center;
     opacity: 1;
     display: flex;
+	z-index:1;
     align-items: center;
+    position: fixed;
+    top: 0px;
+    width: 100%;
 
 
 
@@ -15,29 +33,69 @@ ul { font-family: Courier Prime;
 
     font-size:34px;
 }
-body{
-    background-attachment: scroll;
 
+
+
+
+
+  .navtit{
+
+	color: black;
+	font-size: x-large;
+	margin-left: 10%;
+	
 }
+
+.logo img{
+size: 400px;
+}
+
+.imgbague img{
+    width:50% ;
+
+   
+}
+
+
+
 
 
 .navfont{
     
     color: rgba(82, 82, 82, 0.336);
     
-    
-    margin: 4cm;
+    font-size: 55px;
+    margin: 10%;
 
     background-color: transparent;
 
+
 }
-.bode{background-color: rgb(4, 0, 5);box-sizing: border-box;
+
+@media(max-width: 500px) {
+    .navfont{
+    
+    color: rgba(82, 82, 82, 0.336);
+    
+    font-size: 100px;
+    margin: 10%;
+
+    background-color: transparent;
+
+
+}
+}
+
+
+.bode{box-sizing: border-box;
+    background: url(assets\sky.png) repeat 0 0;
 
     position:absolute;
     margin:auto;
     color:azure;
+    background-color: rgb(2, 14, 20);
+    min-height: 100% ;
 
-    background-image: url(assets/sky.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -58,9 +116,15 @@ body{
 }
 
 .description{
-    font-family: 'Courier New', Courier, monospace; font-size: x-large
+    font-family: 'Courier New', Courier, monospace; font-size: 300px
     ;
     margin-top: 4cm;
+}
+
+@media (min-width:400px){
+    .description{
+        font-size: 200px;
+    }
 }
 
 
@@ -69,4 +133,66 @@ body{
     opacity: 0.5;
 }
 
-.navtit
+
+
+@media screen and (max-width: 500px)  {
+    
+}
+
+@media screen and (min-width: 500px) {
+   
+    .navfont{
+
+        font-size: 65px;
+    }
+    .materiaux{
+        font-family:'Courier New', Courier, monospace; width:60% ;
+        margin-top: 50px;
+        font-size: 30px;
+
+}
+}
+
+.lignes_2{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    
+
+}
+
+.colonnes{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+}
+
+.materiaux{
+    font-family:'Courier New', Courier, monospace; width:80% ;
+    margin-top: 50px;
+    font-size: 44px;
+    
+}
+
+.container {
+    padding: 2px 16px;
+    justify-content: center;
+    align-items: stretch;
+  }
+
+.box {
+   
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+    width: 20%;
+    background-color:rgb(28, 9, 46);
+
+    
+  }
+
+  .box:hover {
+    box-shadow: 0 8px 16px 0 rgba(121, 107, 107, 0.397);
+  }
